fix: update splash handling and visibility logic in DiscoApp

--- a/src/components/disco-app.scss
+++ b/src/components/disco-app.scss
@@ -24,6 +24,14 @@
 	color: var(--disco-foreground);
 }
 
+disco-frame {
+	display: none;
+}
+
+disco-frame[disco-launched] {
+	display: flex;
+}
+
 * {
 	user-select: none;
 	-webkit-user-select: none;
